# cheetah-media-engine

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MIGRATION_INVENTORY.md  debug-browser.mjs  deny.toml  get-models.py  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json
.github/workflows/: ci.yml
apps/qt-demo/: CMakeLists.txt  README.md
apps/qt-demo/qml/: main.qml
apps/qt-demo/src/: cheetah_player_qml.cpp  cheetah_player_qml.h  cheetah_player_widget.cpp  cheetah_player_widget.h  main.cpp  mainwindow.cpp  mainwindow.h
apps/qt-demo/src/qml/: main.cpp
apps/qt-demo/tests/: test_cheetah_player_qml.cpp  test_cheetah_player_qml.h  test_cheetah_player_widget.cpp  test_cheetah_player_widget.h
apps/web-demo/: README.md  index.html  package.json  playback-test.html  vite.config.ts
benches/: README.md
codec-packs/: README.md
codec-packs/ffmpeg-wasm/: README.md  manifest.json  package.json
crates/: README.md
crates/cheetah-container-annexb/: Cargo.toml  README.md
crates/cheetah-container-annexb/src/: demuxer.rs  error.rs  lib.rs  param_sets.rs  tests.rs
crates/cheetah-container-annexb/src/tests/: h264.rs  h265.rs  mod.rs
crates/cheetah-container-flv/: Cargo.toml  README.md
crates/cheetah-container-flv/src/: amf.rs  audio.rs  demuxer.rs  error.rs  header.rs  lib.rs  muxer.rs  recorder.rs  transmux_fmp4.rs  video.rs
crates/cheetah-container-isobmff/: Cargo.toml  README.md
crates/cheetah-container-isobmff/src/: boxes.rs  demuxer.rs  error.rs  fragment.rs  lib.rs  moov.rs  muxer.rs  recorder.rs  sample_entry.rs  tests.rs
crates/cheetah-container-mpegps/: Cargo.toml  README.md
crates/cheetah-container-mpegps/src/: audio.rs  demuxer.rs  error.rs  lib.rs  pack.rs  pes.rs  scan.rs  tests.rs  types.rs  video.rs
crates/cheetah-container-mpegps/tests/fixtures/: h264_baseline.ps
crates/cheetah-container-mpegts/: Cargo.toml  README.md
crates/cheetah-crypto-transforms/: Cargo.toml  README.md
crates/cheetah-crypto-transforms/src/: cbc.rs  error.rs  lib.rs  transform.rs  xor.rs
crates/cheetah-hls-client/: Cargo.toml  README.md
crates/cheetah-hls-client/src/: client.rs  error.rs  lib.rs  model.rs  parser.rs  tests.rs  variant.rs
crates/cheetah-media-abi/: Cargo.toml  README.md
crates/cheetah-media-abi/src/: arena.rs  descriptor.rs  error.rs  handle.rs  lib.rs  version.rs
crates/cheetah-media-android/: Cargo.toml
crates/cheetah-media-android/src/: audio.rs  decoder.rs  jni.rs  lib.rs  probe.rs  renderer.rs
crates/cheetah-media-backend-api/: Cargo.toml  README.md
crates/cheetah-media-backend-api/src/: lib.rs  port.rs
crates/cheetah-media-bitstream/: Cargo.toml  README.md
crates/cheetah-media-bitstream/src/: aac.rs  bit.rs  g711.rs  h264.rs  h265.rs  lib.rs  mp3.rs  rbsp.rs  sei.rs
crates/cheetah-media-bitstream/src/h265/: parameter_sets.rs
crates/cheetah-media-c-bindings/: Cargo.toml  README.md  cbindgen.toml
crates/cheetah-media-c-bindings/include/: cheetah_media.h
crates/cheetah-media-c-bindings/src/: lib.rs
crates/cheetah-media-core/: Cargo.toml  README.md
crates/cheetah-media-core/src/: lib.rs
crates/cheetah-media-engine/: Cargo.toml  README.md
crates/cheetah-media-engine/src/: latency.rs  lib.rs  metrics.rs  recovery.rs  resource.rs  scheduler.rs  state.rs
crates/cheetah-media-engine/src/broadcast/: capture_sources.rs  encoder.rs  encoders.rs  engine.rs  frame.rs  mod.rs  permission.rs  pipeline.rs  processor.rs  publisher.rs  registry.rs  source.rs
crates/cheetah-media-engine/src/native/: diagnostics.rs  lifecycle.rs  mod.rs  negotiator.rs  player.rs  source.rs
crates/cheetah-media-native-audio/: Cargo.toml
crates/cheetah-media-native-audio/src/: capability.rs  lib.rs  probe.rs  registry.rs  sink.rs  sync.rs
crates/cheetah-media-native-decoder/: Cargo.toml
crates/cheetah-media-native-decoder/src/: capability.rs  decoder.rs  g711.rs  lib.rs  probe.rs  registry.rs
crates/cheetah-media-native-renderer/: Cargo.toml
crates/cheetah-media-native-renderer/src/: capability.rs  lib.rs  probe.rs  registry.rs  renderer.rs  surface.rs
crates/cheetah-media-native-transport/: Cargo.toml
crates/cheetah-media-native-transport/src/: http.rs  lib.rs  tests.rs  ws.rs
crates/cheetah-media-pipeline-core/: Cargo.toml  README.md
crates/cheetah-media-pipeline-core/src/: lib.rs  planner.rs
crates/cheetah-media-testkit/: Cargo.toml  README.md
crates/cheetah-media-testkit/src/: compare.rs  lib.rs  store.rs  validate.rs
crates/cheetah-media-timeline/: Cargo.toml  README.md
crates/cheetah-media-timeline/src/: clock.rs  gop.rs  lib.rs  sync.rs
crates/cheetah-media-types/: Cargo.toml  README.md
crates/cheetah-media-types/benches/: budget_and_pool.rs
crates/cheetah-media-types/src/: error.rs  format.rs  frame.rs  lib.rs  limits.rs  metadata.rs  packet.rs  time.rs  track.rs
crates/cheetah-media-types/src/buffer/: budget.rs  mod.rs  pool.rs  ref.rs  wasm.rs
crates/cheetah-media-web-bindings/: Cargo.toml  README.md
crates/cheetah-media-web-bindings/src/: demux.rs  g711.rs  lib.rs  transmux.rs
crates/cheetah-media-web-bindings/src/demux/: demux_arena.rs  demux_event.rs  mod.rs
dev-docs/: 003_web_pro_feature_parity.md  004_qt_native_baseline.md  005_mobile_and_bidirectional.md
dev-docs/001_next_generation_media_engine/: 01_goals_and_slo.md  02_architecture_and_repositories.md  03_media_model_memory_and_abi.md  04_web_runtime_and_fallback.md  05_protocol_codec_audio_and_rendering.md  06_web_sdk_ui_multiview_and_recording.md  07_jessibuca_pro_feature_parity.md  08_native_platforms_and_bidirectional.md  09_security_licensing_observability.md  10_testing_and_acceptance.md  11_implementation_roadmap.md  12_reference_baseline.md  README.md
dev-docs/002_vibe_coding_plan/: 00_requirements_matrix.md  01_execution_contract_and_scope.md  02_three_repo_workflow_and_baseline.md  (+35 more)
docs/: privacy.md  security.md
fuzz/: README.md
scripts/: generate-api-report.mjs  generate-benchmark-report.mjs  generate-fixtures.mjs  generate-sbom.sh  integration-smoke.sh  release.sh  run-acceptance.sh
(+75 files in other folders)
