[workspace]
resolver = "3"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Cheetah Media Engine Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dodojohn83/cheetah-media-engine"
rust-version = "1.94.1"

[workspace.dependencies]
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.139"
wasm-bindgen = "0.2.126"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 0
