[package]
name = "cheetah-crypto-transforms"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Sans-I/O decryption transforms (XOR, AES-128-CBC, SM4-CBC) for the Cheetah media engine."

[dependencies]
aes = { version = "0.9", default-features = false }
sm4 = { version = "0.6", default-features = false }
cipher = { version = "0.5", default-features = false, features = ["alloc"] }

[dev-dependencies]
hex-literal = "0.4"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
