[package]
name = "cheetah-media-abi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Stable ABI and platform ports for media operations."

[features]
default = ["std"]
std = ["cheetah-media-types/std"]

[dependencies]
cheetah-media-types = { path = "../cheetah-media-types", default-features = false }

[lints.rust]
unsafe_code = "deny"
