[package]
name = "cheetah-media-android"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Android MediaCodec/AudioTrack/Surface bindings for the Cheetah media engine."

[features]
default = ["std"]
std = [
    "cheetah-media-abi/std",
    "cheetah-media-types/std",
    "cheetah-media-native-decoder/std",
]

[dependencies]
cheetah-media-abi = { path = "../cheetah-media-abi", default-features = false, features = ["std"] }
cheetah-media-types = { path = "../cheetah-media-types", default-features = false, features = ["std"] }
cheetah-media-native-decoder = { path = "../cheetah-media-native-decoder", default-features = false, features = ["std"] }

[lints.rust]
unsafe_code = "deny"
