[package]
name = "cheetah-media-backend-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Platform-neutral backend port definitions for the Cheetah media engine."

[dependencies]
cheetah-media-types = { path = "../cheetah-media-types" }

[lints.rust]
unsafe_code = "forbid"
