[package]
name = "cheetah-media-bitstream"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Byte and bit-level reader for media containers."

[features]
default = ["std"]
std = ["cheetah-media-types/std"]

[dependencies]
cheetah-media-types = { path = "../cheetah-media-types", default-features = false }

[lints.rust]
unsafe_code = "forbid"
