[package]
name = "cheetah-media-c-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Stable C ABI bindings for the Cheetah media engine."

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["std"]
std = ["cheetah-media-engine/std"]

[dependencies]
cheetah-media-engine = { path = "../cheetah-media-engine", default-features = false }

[dev-dependencies]
cheetah-media-types = { path = "../cheetah-media-types" }

[lints.rust]
unsafe_code = "deny"
