[package]
name = "cheetah-media-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Facade crate for the shared Cheetah media core."

[features]
default = ["std"]
std = [
    "cheetah-media-types/std",
    "cheetah-media-bitstream/std",
    "cheetah-container-flv/std",
    "cheetah-container-mpegts/std",
    "cheetah-container-isobmff/std",
    "cheetah-media-timeline/std",
    "cheetah-media-abi/std",
    "cheetah-media-pipeline-core/std",
    "cheetah-hls-client/std",
]

[dependencies]
cheetah-media-types = { path = "../cheetah-media-types", default-features = false }
cheetah-media-bitstream = { path = "../cheetah-media-bitstream", default-features = false }
cheetah-container-flv = { path = "../cheetah-container-flv", default-features = false }
cheetah-container-mpegts = { path = "../cheetah-container-mpegts", default-features = false }
cheetah-container-isobmff = { path = "../cheetah-container-isobmff", default-features = false }
cheetah-media-timeline = { path = "../cheetah-media-timeline", default-features = false }
cheetah-media-abi = { path = "../cheetah-media-abi", default-features = false }
cheetah-media-pipeline-core = { path = "../cheetah-media-pipeline-core", default-features = false }
cheetah-hls-client = { path = "../cheetah-hls-client", default-features = false }

[lints.rust]
unsafe_code = "forbid"
