[package]
name = "cheetah-media-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Engine orchestration, state machine, and pipeline planner."

[features]
std = [
    "cheetah-media-abi/std",
    "cheetah-media-backend-api/std",
    "cheetah-media-pipeline-core/std",
    "cheetah-media-timeline/std",
    "cheetah-media-types/std",
]

[dependencies]
cheetah-media-abi = { path = "../cheetah-media-abi", default-features = false }
cheetah-media-backend-api = { path = "../cheetah-media-backend-api", default-features = false }
cheetah-media-pipeline-core = { path = "../cheetah-media-pipeline-core", default-features = false }
cheetah-media-timeline = { path = "../cheetah-media-timeline", default-features = false }
cheetah-media-types = { path = "../cheetah-media-types", default-features = false }

[lints.rust]
unsafe_code = "forbid"
