[package]
name = "cheetah-media-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Test fixtures, property test helpers, and contract harness for Cheetah media."

[dependencies]
cheetah-media-types = { path = "../cheetah-media-types" }

[lints.rust]
unsafe_code = "forbid"
