[package]
name = "cheetah-media-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Test fixtures, property test helpers, and contract harness for Cheetah media."

[dependencies]
cheetah-media-types = { path = "../cheetah-media-types" }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[dev-dependencies]
proptest = "1.5.0"
