[package]
name = "cheetah-media-timeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Media timeline and synchronization primitives."

[features]
default = ["std"]
std = ["cheetah-media-types/std"]

[dependencies]
cheetah-media-types = { path = "../cheetah-media-types", default-features = false }

[lints.rust]
unsafe_code = "forbid"
