[package]
name = "cheetah-media-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared media types, codec identifiers, and timestamps."

[features]
default = ["std"]
std = []
alloc = []

[dependencies]

[lints.rust]
unsafe_code = "forbid"
