[package]
name = "cheetah-media-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared media types, codec identifiers, and timestamps."

[features]
default = ["std"]
std = []
alloc = []

[dependencies]
bytes = { version = "1.12.1", default-features = false }
spin = { version = "0.9.9", default-features = false, features = ["mutex", "spin_mutex"] }

[lints.rust]
unsafe_code = "forbid"
