[package]
name = "cheetah-media-web-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WebAssembly bindings for the Cheetah media engine."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
cheetah-media-engine = { path = "../cheetah-media-engine" }
cheetah-media-abi = { path = "../cheetah-media-abi" }
cheetah-media-types = { path = "../cheetah-media-types" }
console_error_panic_hook = { workspace = true, optional = true }

[features]
default = ["console_error_panic_hook"]

[lints.rust]
unsafe_code = "deny"
